[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["George Kaye <georgejkaye@gmail.com>"]
readme = "README.md"
packages = [{ include = "api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
types-python-jose = "^3.3.4.8"
types-passlib = "^1.7.7.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
