[tool.poetry]
name = "daemon"
version = "1.0.0"
description = ""
authors = ["George Kaye <georgejkaye@gmail.com>"]
readme = "README.md"
packages = [{ include = "daemon", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
